@@ -36,15 +36,19 @@ public class MigrateAriaCasesDocumentUploaderConfirmation implements PostSubmitC
         final State ariaDesiredState = asylumCase.read(ARIA_DESIRED_STATE, State.class)
             .orElseThrow(() -> new IllegalStateException("ariaDesiredState is not present"));
 
-        postSubmitResponse.setConfirmationHeader(String.format("# You have progressed this case \n## New state: \n## '%s'", ariaDesiredState.getDescription()));
+        postSubmitResponse.setConfirmationHeader("# You have progressed this case \n## New state: \n## '%s'".formatted(ariaDesiredState.getDescription()));
         postSubmitResponse.setConfirmationBody(
-            "#### What happens next\n\n"
-                + "You can add or edit documents at any time through the 'Next step' \n"
-                + "dropdown list in your case details, using 'Edit documents'.\n\n"
-                + "#### If this case was listed for a hearing\n\n"
-                + "Listings have not been migrated. If this case was listed for a hearing,     \n"
-                + "you must transfer the listing over to the hearing management     \n"
-                + "component (HMC) as part of the migration process."
+            """
+            #### What happens next
+            
+            You can add or edit documents at any time through the 'Next step'\s
+            dropdown list in your case details, using 'Edit documents'.
+            
+            #### If this case was listed for a hearing
+            
+            Listings have not been migrated. If this case was listed for a hearing,    \s
+            you must transfer the listing over to the hearing management    \s
+            component (HMC) as part of the migration process."""
         );
 
         return postSubmitResponse;
